Try to fix touch keyboard Also some CSS z-index fixes

--- a/css/fc4i.css
+++ b/css/fc4i.css
@@ -1518,14 +1518,14 @@ div.bg-choice:not(input[disabled]):has(input:checked) {
     left: 0;
     top: calc(2.5 * var(--font-size));
     display: block;
-    z-index: 11;
+    z-index: 6;
 }
 
 .jsmind-actions {
     position: fixed;
     top: 0;
     background-color: var(--mdc-theme-primary);
-    z-index: 10;
+    z-index: 5;
 }
 
 #jsmind-menu-button {
@@ -1535,12 +1535,12 @@ div.bg-choice:not(input[disabled]):has(input:checked) {
 #jsmind-search-div {
     position: fixed;
     left: 40px;
-    z-index: 10;
+    z-index: 5;
     --icon-button-size: 40;
 }
 
 #jsmind-search-button {
-    left: 40;
+    left: 40px;
 }
 
 #provider-hits {
